src/eccodes/y.output
Terminals unused in grammar

    END
    JSON
    XML
    OVERRIDE


State 305 conflicts: 6 shift/reduce
State 306 conflicts: 1 shift/reduce
State 674 conflicts: 1 shift/reduce
State 730 conflicts: 1 shift/reduce


Grammar

    0 $accept: all $end

    1 all: empty
    2    | concept_list
    3    | hash_array_list
    4    | instructions
    5    | rules
    6    | error

    7 empty: ε

    8 dvalues: FLOAT
    9        | dvalues ',' FLOAT
   10        | INTEGER
   11        | dvalues ',' INTEGER

   12 svalues: STRING
   13        | svalues ',' STRING

   14 integer_array: INTEGER
   15              | integer_array ',' INTEGER

   16 instructions: instruction
   17             | instruction instructions
   18             | instruction ';' instructions
   19             | instruction ';'

   20 instruction: simple ';'
   21            | if_block
   22            | list_block
   23            | while_block
   24            | trigger_block
   25            | concept_block
   26            | hash_array_block
   27            | when_block
   28            | switch_block

   29 semi: ';'
   30     | semi ';'

   31 argument_list: empty
   32              | arguments

   33 arguments: argument
   34          | argument ',' arguments

   35 argument: expression

   36 simple: UNSIGNED '[' INTEGER ']' IDENT default flags
   37       | UNSIGNED '[' INTEGER ']' IDENT '[' argument_list ']' default flags
   38       | UNSIGNED '(' INTEGER ')' IDENT default flags
   39       | UNSIGNED '(' INTEGER ')' IDENT '[' argument_list ']' default flags
   40       | ASCII '[' INTEGER ']' IDENT default flags
   41       | GROUP IDENT default flags
   42       | GROUP IDENT '(' argument_list ')' default flags
   43       | IDENT '=' TO_INTEGER '(' argument_list ')' flags
   44       | IDENT '=' SEX2DEC '(' argument_list ')' flags
   45       | IDENT '=' TO_STRING '(' argument_list ')' flags
   46       | NON_ALPHA IDENT default flags
   47       | ASCII '[' INTEGER ']' STRING default flags
   48       | BYTE '[' INTEGER ']' IDENT default flags
   49       | BYTE '[' INTEGER ']' IDENT '[' argument_list ']' default flags
   50       | KSEC1EXPVER '[' INTEGER ']' IDENT default flags
   51       | SIGNED '[' INTEGER ']' IDENT default flags
   52       | SIGNED '[' INTEGER ']' IDENT '[' argument_list ']' default flags
   53       | SIGNED '(' INTEGER ')' IDENT default flags
   54       | SIGNED '(' INTEGER ')' IDENT '[' argument_list ']' default flags
   55       | CODETABLE '[' INTEGER ']' IDENT argument default flags
   56       | CODETABLE '[' IDENT ']' IDENT argument default flags
   57       | CODETABLE '[' INTEGER ']' IDENT argument default SET '(' IDENT ')' flags
   58       | CODETABLE '[' INTEGER ']' IDENT '(' argument_list ')' default flags
   59       | SMART_TABLE IDENT '(' argument_list ')' default flags
   60       | IDENT '=' DICTIONARY '(' argument_list ')' default flags
   61       | IDENT '=' GETENV '(' argument_list ')' default flags
   62       | COMPLEX_CODETABLE '[' INTEGER ']' IDENT argument default flags
   63       | COMPLEX_CODETABLE '[' INTEGER ']' IDENT '(' argument_list ')' default flags
   64       | FLAG '[' INTEGER ']' IDENT argument default flags
   65       | LOOKUP '[' INTEGER ']' IDENT '(' argument_list ')' flags
   66       | FLAGBIT IDENT '(' argument_list ')' default flags
   67       | LABEL IDENT
   68       | LABEL STRING
   69       | IBMFLOAT IDENT default flags
   70       | INT8 IDENT default flags
   71       | UINT8 IDENT default flags
   72       | INT16 IDENT default flags
   73       | UINT16 IDENT default flags
   74       | INT16_LITTLE_ENDIAN IDENT default flags
   75       | UINT16_LITTLE_ENDIAN IDENT default flags
   76       | INT32 IDENT default flags
   77       | UINT32 IDENT default flags
   78       | INT32_LITTLE_ENDIAN IDENT default flags
   79       | UINT32_LITTLE_ENDIAN IDENT default flags
   80       | INT64 IDENT default flags
   81       | UINT64 IDENT default flags
   82       | INT64_LITTLE_ENDIAN IDENT default flags
   83       | UINT64_LITTLE_ENDIAN IDENT default flags
   84       | BLOB IDENT '[' argument_list ']' default flags
   85       | IBMFLOAT IDENT '.' IDENT default flags
   86       | IBMFLOAT IDENT '[' argument ']' default flags
   87       | POS IDENT
   88       | INTCONST IDENT '=' argument flags
   89       | TRANS IDENT '=' argument flags
   90       | TRANS IDENT '=' '{' dvalues '}' flags
   91       | FLOAT IDENT default flags
   92       | FLOAT IDENT '.' IDENT default flags
   93       | FLOAT IDENT '[' argument ']' default flags
   94       | G1_HALF_BYTE IDENT
   95       | SECTION_LENGTH '[' INTEGER ']' IDENT default
   96       | G1_MESSAGE_LENGTH '[' INTEGER ']' IDENT '(' argument_list ')'
   97       | G1_SECTION4_LENGTH '[' INTEGER ']' IDENT '(' argument_list ')'
   98       | KSEC IDENT argument
   99       | PAD IDENT '(' argument_list ')'
  100       | PADTO IDENT '(' argument_list ')'
  101       | PADTOEVEN IDENT '(' argument_list ')'
  102       | PADTOMULTIPLE IDENT '(' argument_list ')'
  103       | MESSAGE '[' INTEGER ']' IDENT flags
  104       | MESSAGE_COPY IDENT flags
  105       | SECTION_PADDING IDENT flags
  106       | TEMPLATE IDENT STRING
  107       | TEMPLATE_NOFAIL IDENT STRING
  108       | ALIAS IDENT '=' IDENT flags
  109       | UNALIAS IDENT
  110       | ALIAS IDENT '.' IDENT '=' IDENT flags
  111       | UNALIAS IDENT '.' IDENT
  112       | META IDENT IDENT '(' argument_list ')' default flags
  113       | META IDENT '.' IDENT IDENT '(' argument_list ')' default flags
  114       | ITERATOR IDENT '(' argument_list ')'
  115       | NEAREST IDENT '(' argument_list ')'
  116       | BOX IDENT '(' argument_list ')'
  117       | EXPORT IDENT '(' argument_list ')'
  118       | REMOVE argument_list
  119       | RENAME '(' IDENT ',' IDENT ')'
  120       | ASSERT '(' expression ')'
  121       | MODIFY IDENT flags
  122       | SET IDENT '=' MISSING
  123       | SET IDENT '=' expression
  124       | SET IDENT '=' '{' dvalues '}'
  125       | SET IDENT '=' '{' svalues '}'
  126       | SET_NOFAIL IDENT '=' expression
  127       | WRITE STRING
  128       | WRITE
  129       | WRITE '(' INTEGER ')' STRING
  130       | WRITE '(' INTEGER ')'
  131       | APPEND STRING
  132       | APPEND
  133       | APPEND '(' INTEGER ')' STRING
  134       | APPEND '(' INTEGER ')'
  135       | CLOSE '(' IDENT ')'
  136       | PRINT STRING
  137       | PRINT '(' STRING ')' STRING
  138       | PRINT '(' IDENT ')' STRING
  139       | PRINT

  140 if_block: IF '(' expression ')' '{' instructions '}'
  141         | IF '(' expression ')' '{' instructions '}' ELSE '{' instructions '}'
  142         | IF_TRANSIENT '(' expression ')' '{' instructions '}'
  143         | IF_TRANSIENT '(' expression ')' '{' instructions '}' ELSE '{' instructions '}'

  144 when_block: WHEN '(' expression ')' set semi
  145           | WHEN '(' expression ')' '{' set_list '}'
  146           | WHEN '(' expression ')' '{' set_list '}' ELSE '{' set_list '}'

  147 set: SET IDENT '=' expression
  148    | SET_NOFAIL IDENT '=' expression

  149 set_list: set semi
  150         | set_list set semi

  151 default: empty
  152        | '=' argument_list

  153 flags: empty
  154      | ':' flag_list

  155 flag_list: flag
  156          | flag_list ',' flag

  157 flag: READ_ONLY
  158     | LOWERCASE
  159     | DUMP
  160     | NO_COPY
  161     | NO_FAIL
  162     | HIDDEN
  163     | EDITION_SPECIFIC
  164     | CAN_BE_MISSING
  165     | CONSTRAINT
  166     | COPY_OK
  167     | COPY_AS_LONG
  168     | COPY_IF_CHANGING_EDITION
  169     | TRANS
  170     | STRING_TYPE
  171     | LONG_TYPE
  172     | DOUBLE_TYPE

  173 list_block: IDENT LIST '(' expression ')' '{' instructions '}'

  174 while_block: WHILE '(' expression ')' '{' instructions '}'

  175 trigger_block: TRIGGER '(' argument_list ')' '{' instructions '}'

  176 concept_block: CONCEPT IDENT '{' concept_list '}' flags
  177              | CONCEPT IDENT '(' IDENT ')' '{' concept_list '}' flags
  178              | CONCEPT IDENT '(' IDENT ',' STRING ',' IDENT ',' IDENT ')' flags
  179              | CONCEPT IDENT '(' IDENT ',' IDENT ',' IDENT ',' IDENT ')' flags
  180              | CONCEPT IDENT '(' IDENT ',' STRING ',' IDENT ',' IDENT ',' IDENT ')' flags
  181              | CONCEPT IDENT '(' IDENT ',' STRING ',' IDENT ')' flags
  182              | CONCEPT IDENT '.' IDENT '(' IDENT ',' STRING ',' IDENT ',' IDENT ')' flags
  183              | CONCEPT IDENT '.' IDENT '(' IDENT ',' IDENT ',' IDENT ',' IDENT ')' flags
  184              | CONCEPT IDENT '.' IDENT '(' IDENT ',' STRING ',' IDENT ')' flags
  185              | CONCEPT IDENT '.' IDENT '{' concept_list '}' flags
  186              | CONCEPT IDENT '.' IDENT '(' IDENT ')' '{' concept_list '}' flags
  187              | CONCEPT_NOFAIL IDENT '{' concept_list '}' flags
  188              | CONCEPT_NOFAIL IDENT '(' IDENT ')' '{' concept_list '}' flags
  189              | CONCEPT_NOFAIL IDENT '(' IDENT ',' STRING ',' IDENT ',' IDENT ')' flags
  190              | CONCEPT_NOFAIL IDENT '(' IDENT ',' STRING ',' IDENT ')' flags
  191              | CONCEPT_NOFAIL IDENT '.' IDENT '(' IDENT ',' STRING ',' IDENT ',' IDENT ')' flags
  192              | CONCEPT_NOFAIL IDENT '.' IDENT '(' IDENT ',' STRING ',' IDENT ')' flags
  193              | CONCEPT_NOFAIL IDENT '.' IDENT '{' concept_list '}' flags
  194              | CONCEPT_NOFAIL IDENT '.' IDENT '(' IDENT ')' '{' concept_list '}' flags

  195 concept_list: concept_value
  196             | concept_list concept_value

  197 hash_array_list: hash_array_value
  198                | hash_array_list hash_array_value

  199 hash_array_block: HASH_ARRAY IDENT '{' hash_array_list '}' flags
  200                 | HASH_ARRAY IDENT '(' IDENT ',' STRING ',' IDENT ',' IDENT ')' flags

  201 case_list: case_value
  202          | case_list case_value

  203 case_value: CASE arguments ':' instructions

  204 switch_block: SWITCH '(' argument_list ')' '{' case_list DEFAULT ':' instructions '}'
  205             | SWITCH '(' argument_list ')' '{' case_list DEFAULT ':' '}'
  206             | SWITCH '(' argument_list ')' '{' case_list '}'

  207 concept_value: STRING '=' '{' concept_conditions '}'
  208              | IDENT '=' '{' concept_conditions '}'
  209              | INTEGER '=' '{' concept_conditions '}'
  210              | FLOAT '=' '{' concept_conditions '}'

  211 concept_conditions: concept_condition
  212                   | concept_condition concept_conditions

  213 concept_condition: IDENT '=' expression ';'
  214                  | IDENT '=' '[' integer_array ']' ';'

  215 hash_array_value: STRING '=' '[' integer_array ']'
  216                 | IDENT '=' '[' integer_array ']'

  217 string_or_ident: SUBSTR '(' IDENT ',' INTEGER ',' INTEGER ')'
  218                | IDENT
  219                | SUBSTR '(' STRING ',' INTEGER ',' INTEGER ')'
  220                | STRING

  221 atom: string_or_ident
  222     | INTEGER
  223     | FLOAT
  224     | NIL
  225     | DUMMY
  226     | '(' expression ')'
  227     | '-' atom
  228     | IDENT '(' ')'
  229     | IDENT '(' argument_list ')'

  230 power: atom '^' power
  231      | atom

  232 factor: factor '*' power
  233       | factor '/' power
  234       | factor '%' power
  235       | factor BIT power
  236       | factor BITOFF power
  237       | power
  238       | LENGTH '(' IDENT ')'
  239       | IS_IN_LIST '(' IDENT ',' STRING ')'
  240       | IS_IN_DICT '(' IDENT ',' STRING ')'
  241       | IS_INTEGER '(' IDENT ',' INTEGER ')'
  242       | IS_INTEGER '(' IDENT ',' INTEGER ',' INTEGER ')'
  243       | IS_INTEGER '(' IDENT ')'

  244 term: term '+' factor
  245     | term '-' factor
  246     | factor

  247 condition: condition GT term
  248          | condition EQ term
  249          | condition LT term
  250          | condition GE term
  251          | condition LE term
  252          | condition NE term
  253          | string_or_ident IS string_or_ident
  254          | string_or_ident ISNOT string_or_ident
  255          | NOT condition
  256          | term

  257 conjunction: conjunction AND condition
  258            | condition

  259 disjunction: disjunction OR conjunction
  260            | conjunction

  261 expression: disjunction

  262 rule: fact
  263     | conditional_rule

  264 rule_entry: IDENT '=' expression ';'
  265           | SKIP ';'

  266 rule_entries: rule_entry
  267             | rule_entry rule_entries

  268 fact: rule_entry

  269 conditional_rule: IF '(' expression ')' '{' rule_entries '}'

  270 rules: rule
  271      | rule rules


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 234
    '(' (40) 38 39 42 43 44 45 53 54 57 58 59 60 61 63 65 66 96 97 99 100 101 102 112 113 114 115 116 117 119 120 129 130 133 134 135 137 138 140 141 142 143 144 145 146 173 174 175 177 178 179 180 181 182 183 184 186 188 189 190 191 192 194 200 204 205 206 217 219 226 228 229 238 239 240 241 242 243 269
    ')' (41) 38 39 42 43 44 45 53 54 57 58 59 60 61 63 65 66 96 97 99 100 101 102 112 113 114 115 116 117 119 120 129 130 133 134 135 137 138 140 141 142 143 144 145 146 173 174 175 177 178 179 180 181 182 183 184 186 188 189 190 191 192 194 200 204 205 206 217 219 226 228 229 238 239 240 241 242 243 269
    '*' (42) 232
    '+' (43) 244
    ',' (44) 9 11 13 15 34 119 156 178 179 180 181 182 183 184 189 190 191 192 200 217 219 239 240 241 242
    '-' (45) 227 245
    '.' (46) 85 92 110 111 113 182 183 184 185 186 191 192 193 194
    '/' (47) 233
    ':' (58) 154 203 204 205
    ';' (59) 18 19 20 29 30 213 214 264 265
    '=' (61) 43 44 45 60 61 88 89 90 108 110 122 123 124 125 126 147 148 152 207 208 209 210 213 214 215 216 264
    '[' (91) 36 37 39 40 47 48 49 50 51 52 54 55 56 57 58 62 63 64 65 84 86 93 95 96 97 103 214 215 216
    ']' (93) 36 37 39 40 47 48 49 50 51 52 54 55 56 57 58 62 63 64 65 84 86 93 95 96 97 103 214 215 216
    '^' (94) 230
    '{' (123) 90 124 125 140 141 142 143 145 146 173 174 175 176 177 185 186 187 188 193 194 199 204 205 206 207 208 209 210 269
    '}' (125) 90 124 125 140 141 142 143 145 146 173 174 175 176 177 185 186 187 188 193 194 199 204 205 206 207 208 209 210 269
    error (256) 6
    LOWERCASE (258) 158
    IF (259) 140 141 269
    IF_TRANSIENT (260) 142 143
    ELSE (261) 141 143 146
    END (262)
    CLOSE (263) 135
    UNSIGNED (264) 36 37 38 39
    TEMPLATE (265) 106
    TEMPLATE_NOFAIL (266) 107
    TRIGGER (267) 175
    ASCII (268) 40 47
    GROUP (269) 41 42
    NON_ALPHA (270) 46
    KSEC1EXPVER (271) 50
    LABEL (272) 67 68
    LIST (273) 173
    IS_IN_LIST (274) 239
    IS_IN_DICT (275) 240
    IS_INTEGER (276) 241 242 243
    TO_INTEGER (277) 43
    TO_STRING (278) 45
    SEX2DEC (279) 44
    WHILE (280) 174
    IBMFLOAT (281) 69 85 86
    SIGNED (282) 51 52 53 54
    UINT8 (283) 71
    INT8 (284) 70
    UINT16 (285) 73
    INT16 (286) 72
    UINT16_LITTLE_ENDIAN (287) 75
    INT16_LITTLE_ENDIAN (288) 74
    UINT32 (289) 77
    INT32 (290) 76
    UINT32_LITTLE_ENDIAN (291) 79
    INT32_LITTLE_ENDIAN (292) 78
    UINT64 (293) 81
    INT64 (294) 80
    UINT64_LITTLE_ENDIAN (295) 83
    INT64_LITTLE_ENDIAN (296) 82
    BLOB (297) 84
    BYTE (298) 48 49
    CODETABLE (299) 55 56 57 58
    SMART_TABLE (300) 59
    DICTIONARY (301) 60
    COMPLEX_CODETABLE (302) 62 63
    LOOKUP (303) 65
    ALIAS (304) 108 110
    UNALIAS (305) 109 111
    META (306) 112 113
    POS (307) 87
    INTCONST (308) 88
    TRANS (309) 89 90 169
    FLAGBIT (310) 66
    CONCEPT (311) 176 177 178 179 180 181 182 183 184 185 186
    GETENV (312) 61
    HASH_ARRAY (313) 199 200
    CONCEPT_NOFAIL (314) 187 188 189 190 191 192 193 194
    NIL (315) 224
    DUMMY (316) 225
    MODIFY (317) 121
    READ_ONLY (318) 157
    STRING_TYPE (319) 170
    LONG_TYPE (320) 171
    DOUBLE_TYPE (321) 172
    NO_COPY (322) 160
    DUMP (323) 159
    JSON (324)
    XML (325)
    NO_FAIL (326) 161
    EDITION_SPECIFIC (327) 163
    OVERRIDE (328)
    HIDDEN (329) 162
    CAN_BE_MISSING (330) 164
    MISSING (331) 122
    CONSTRAINT (332) 165
    COPY_OK (333) 166
    COPY_AS_LONG (334) 167
    COPY_IF_CHANGING_EDITION (335) 168
    WHEN (336) 144 145 146
    SET (337) 57 122 123 124 125 147
    SET_NOFAIL (338) 126 148
    WRITE (339) 127 128 129 130
    APPEND (340) 131 132 133 134
    PRINT (341) 136 137 138 139
    EXPORT (342) 117
    REMOVE (343) 118
    RENAME (344) 119
    SKIP (345) 265
    PAD (346) 99
    SECTION_PADDING (347) 105
    MESSAGE (348) 103
    MESSAGE_COPY (349) 104
    PADTO (350) 100
    PADTOEVEN (351) 101
    PADTOMULTIPLE (352) 102
    G1_HALF_BYTE (353) 94
    G1_MESSAGE_LENGTH (354) 96
    G1_SECTION4_LENGTH (355) 97
    SECTION_LENGTH (356) 95
    LENGTH (357) 238
    FLAG (358) 64
    ITERATOR (359) 114
    NEAREST (360) 115
    BOX (361) 116
    KSEC (362) 98
    ASSERT (363) 120
    SUBSTR (364) 217 219
    CASE (365) 203
    SWITCH (366) 204 205 206
    DEFAULT (367) 204 205
    EQ (368) 248
    NE (369) 252
    GE (370) 250
    LE (371) 251
    LT (372) 249
    GT (373) 247
    BIT (374) 235
    BITOFF (375) 236
    AND (376) 257
    OR (377) 259
    NOT (378) 255
    IS (379) 253
    ISNOT (380) 254
    IDENT <str> (381) 36 37 38 39 40 41 42 43 44 45 46 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 119 121 122 123 124 125 126 135 138 147 148 173 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 199 200 208 213 214 216 217 218 228 229 238 239 240 241 242 243 264
    STRING <str> (382) 12 13 47 68 106 107 127 129 131 133 136 137 138 178 180 181 182 184 189 190 191 192 200 207 215 219 220 239 240
    INTEGER <lval> (383) 10 11 14 15 36 37 38 39 40 47 48 49 50 51 52 53 54 55 57 58 62 63 64 65 95 96 97 103 129 130 133 134 209 217 219 222 241 242
    FLOAT <dval> (384) 8 9 91 92 93 210 223


Nonterminals, with rules where they appear

    $accept (147)
        on left: 0
    all (148)
        on left: 1 2 3 4 5 6
        on right: 0
    empty (149)
        on left: 7
        on right: 1 31 151 153
    dvalues <dvalue> (150)
        on left: 8 9 10 11
        on right: 9 11 90 124
    svalues <svalue> (151)
        on left: 12 13
        on right: 13 125
    integer_array <ivalue> (152)
        on left: 14 15
        on right: 15 214 215 216
    instructions <act> (153)
        on left: 16 17 18 19
        on right: 4 17 18 140 141 142 143 173 174 175 203 204
    instruction <act> (154)
        on left: 20 21 22 23 24 25 26 27 28
        on right: 16 17 18 19
    semi (155)
        on left: 29 30
        on right: 30 144 149 150
    argument_list <explist> (156)
        on left: 31 32
        on right: 37 39 42 43 44 45 49 52 54 58 59 60 61 63 65 66 84 96 97 99 100 101 102 112 113 114 115 116 117 118 152 175 204 205 206 229
    arguments <explist> (157)
        on left: 33 34
        on right: 32 34 203
    argument <explist> (158)
        on left: 35
        on right: 33 34 55 56 57 62 64 86 88 89 93 98
    simple <act> (159)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139
        on right: 20
    if_block <act> (160)
        on left: 140 141 142 143
        on right: 21
    when_block <act> (161)
        on left: 144 145 146
        on right: 27
    set <act> (162)
        on left: 147 148
        on right: 144 149 150
    set_list <act> (163)
        on left: 149 150
        on right: 145 146 150
    default <explist> (164)
        on left: 151 152
        on right: 36 37 38 39 40 41 42 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 66 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 91 92 93 95 112 113
    flags <lval> (165)
        on left: 153 154
        on right: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 88 89 90 91 92 93 103 104 105 108 110 112 113 121 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 199 200
    flag_list <lval> (166)
        on left: 155 156
        on right: 154 156
    flag <lval> (167)
        on left: 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172
        on right: 155 156
    list_block <act> (168)
        on left: 173
        on right: 22
    while_block <act> (169)
        on left: 174
        on right: 23
    trigger_block <act> (170)
        on left: 175
        on right: 24
    concept_block <act> (171)
        on left: 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
        on right: 25
    concept_list <concept_value> (172)
        on left: 195 196
        on right: 2 176 177 185 186 187 188 193 194 196
    hash_array_list <hash_array_value> (173)
        on left: 197 198
        on right: 3 198 199
    hash_array_block <act> (174)
        on left: 199 200
        on right: 26
    case_list <case_value> (175)
        on left: 201 202
        on right: 202 204 205 206
    case_value <case_value> (176)
        on left: 203
        on right: 201 202
    switch_block <act> (177)
        on left: 204 205 206
        on right: 28
    concept_value <concept_value> (178)
        on left: 207 208 209 210
        on right: 195 196
    concept_conditions <concept_condition> (179)
        on left: 211 212
        on right: 207 208 209 210 212
    concept_condition <concept_condition> (180)
        on left: 213 214
        on right: 211 212
    hash_array_value <hash_array_value> (181)
        on left: 215 216
        on right: 197 198
    string_or_ident <exp> (182)
        on left: 217 218 219 220
        on right: 221 253 254
    atom <exp> (183)
        on left: 221 222 223 224 225 226 227 228 229
        on right: 227 230 231
    power <exp> (184)
        on left: 230 231
        on right: 230 232 233 234 235 236 237
    factor <exp> (185)
        on left: 232 233 234 235 236 237 238 239 240 241 242 243
        on right: 232 233 234 235 236 244 245 246
    term <exp> (186)
        on left: 244 245 246
        on right: 244 245 247 248 249 250 251 252 256
    condition <exp> (187)
        on left: 247 248 249 250 251 252 253 254 255 256
        on right: 247 248 249 250 251 252 255 257 258
    conjunction <exp> (188)
        on left: 257 258
        on right: 257 259 260
    disjunction <exp> (189)
        on left: 259 260
        on right: 259 261
    expression <exp> (190)
        on left: 261
        on right: 35 120 123 126 140 141 142 143 144 145 146 147 148 173 174 213 226 264 269
    rule <rules> (191)
        on left: 262 263
        on right: 270 271
    rule_entry <rule_entry> (192)
        on left: 264 265
        on right: 266 267 268
    rule_entries <rule_entry> (193)
        on left: 266 267
        on right: 267 269
    fact <rules> (194)
        on left: 268
        on right: 262
    conditional_rule <rules> (195)
        on left: 269
        on right: 263
    rules <rules> (196)
        on left: 270 271
        on right: 5 271


State 0

    0 $accept: • all $end

    error                 shift, and go to state 1
    IF                    shift, and go to state 2
    IF_TRANSIENT          shift, and go to state 3
    CLOSE                 shift, and go to state 4
    UNSIGNED              shift, and go to state 5
    TEMPLATE              shift, and go to state 6
    TEMPLATE_NOFAIL       shift, and go to state 7
    TRIGGER               shift, and go to state 8
    ASCII                 shift, and go to state 9
    GROUP                 shift, and go to state 10
    NON_ALPHA             shift, and go to state 11
    KSEC1EXPVER           shift, and go to state 12
    LABEL                 shift, and go to state 13
    WHILE                 shift, and go to state 14
    IBMFLOAT              shift, and go to state 15
    SIGNED                shift, and go to state 16
    UINT8                 shift, and go to state 17
    INT8                  shift, and go to state 18
    UINT16                shift, and go to state 19
    INT16                 shift, and go to state 20
    UINT16_LITTLE_ENDIAN  shift, and go to state 21
    INT16_LITTLE_ENDIAN   shift, and go to state 22
    UINT32                shift, and go to state 23
    INT32                 shift, and go to state 24
    UINT32_LITTLE_ENDIAN  shift, and go to state 25
    INT32_LITTLE_ENDIAN   shift, and go to state 26
    UINT64                shift, and go to state 27
    INT64                 shift, and go to state 28
    UINT64_LITTLE_ENDIAN  shift, and go to state 29
    INT64_LITTLE_ENDIAN   shift, and go to state 30
    BLOB                  shift, and go to state 31
    BYTE                  shift, and go to state 32
    CODETABLE             shift, and go to state 33
    SMART_TABLE           shift, and go to state 34
    COMPLEX_CODETABLE     shift, and go to state 35
    LOOKUP                shift, and go to state 36
    ALIAS                 shift, and go to state 37
    UNALIAS               shift, and go to state 38
    META                  shift, and go to state 39
    POS                   shift, and go to state 40
    INTCONST              shift, and go to state 41
    TRANS                 shift, and go to state 42
    FLAGBIT               shift, and go to state 43
    CONCEPT               shift, and go to state 44
    HASH_ARRAY            shift, and go to state 45
    CONCEPT_NOFAIL        shift, and go to state 46
    MODIFY                shift, and go to state 47
    WHEN                  shift, and go to state 48
    SET                   shift, and go to state 49
    SET_NOFAIL            shift, and go to state 50
    WRITE                 shift, and go to state 51
    APPEND                shift, and go to state 52
    PRINT                 shift, and go to state 53
    EXPORT                shift, and go to state 54
    REMOVE                shift, and go to state 55
    RENAME                shift, and go to state 56
    SKIP                  shift, and go to state 57
    PAD                   shift, and go to state 58
    SECTION_PADDING       shift, and go to state 59
    MESSAGE               shift, and go to state 60
    MESSAGE_COPY          shift, and go to state 61
    PADTO                 shift, and go to state 62
    PADTOEVEN             shift, and go to state 63
    PADTOMULTIPLE         shift, and go to state 64
    G1_HALF_BYTE          shift, and go to state 65
    G1_MESSAGE_LENGTH     shift, and go to state 66
    G1_SECTION4_LENGTH    shift, and go to state 67
    SECTION_LENGTH        shift, and go to state 68
    FLAG                  shift, and go to state 69
    ITERATOR              shift, and go to state 70
    NEAREST               shift, and go to state 71
    BOX                   shift, and go to state 72
    KSEC                  shift, and go to state 73
    ASSERT                shift, and go to state 74
    SWITCH                shift, and go to state 75
    IDENT                 shift, and go to state 76
    STRING                shift, and go to state 77
    INTEGER               shift, and go to state 78
    FLOAT                 shift, and go to state 79

    $end  reduce using rule 7 (empty)

    all               go to state 80
    empty             go to state 81
    instructions      go to state 82
    instruction       go to state 83
    simple            go to state 84
    if_block          go to state 85
    when_block        go to state 86
    list_block        go to state 87
    while_block       go to state 88
    trigger_block     go to state 89
    concept_block     go to state 90
    concept_list      go to state 91
    hash_array_list   go to state 92
    hash_array_block  go to state 93
    switch_block      go to state 94
    concept_value     go to state 95
    hash_array_value  go to state 96
    rule              go to state 97
    rule_entry        go to state 98
    fact              go to state 99
    conditional_rule  go to state 100
    rules             go to state 101


State 1

    6 all: error •

    $default  reduce using rule 6 (all)


State 2

  140 if_block: IF • '(' expression ')' '{' instructions '}'
  141         | IF • '(' expression ')' '{' instructions '}' ELSE '{' instructions '}'
  269 conditional_rule: IF • '(' expression ')' '{' rule_entries '}'

    '('  shift, and go to state 102


State 3

  142 if_block: IF_TRANSIENT • '(' expression ')' '{' instructions '}'
  143         | IF_TRANSIENT • '(' expression ')' '{' instructions '}' ELSE '{' instructions '}'

    '('  shift, and go to state 103


State 4

  135 simple: CLOSE • '(' IDENT ')'

    '('  shift, and go to state 104


State 5

   36 simple: UNSIGNED • '[' INTEGER ']' IDENT default flags
   37       | UNSIGNED • '[' INTEGER ']' IDENT '[' argument_list ']' default flags
   38       | UNSIGNED • '(' INTEGER ')' IDENT default flags
   39       | UNSIGNED • '(' INTEGER ')' IDENT '[' argument_list ']' default flags

    '['  shift, and go to state 105
    '('  shift, and go to state 106


State 6

  106 simple: TEMPLATE • IDENT STRING

    IDENT  shift, and go to state 107


State 7

  107 simple: TEMPLATE_NOFAIL • IDENT STRING

    IDENT  shift, and go to state 108


State 8

  175 trigger_block: TRIGGER • '(' argument_list ')' '{' instructions '}'

    '('  shift, and go to state 109


State 9

   40 simple: ASCII • '[' INTEGER ']' IDENT default flags
   47       | ASCII • '[' INTEGER ']' STRING default flags

    '['  shift, and go to state 110


State 10

   41 simple: GROUP • IDENT default flags
   42       | GROUP • IDENT '(' argument_list ')' default flags

    IDENT  shift, and go to state 111


State 11

   46 simple: NON_ALPHA • IDENT default flags

    IDENT  shift, and go to state 112


State 12

   50 simple: KSEC1EXPVER • '[' INTEGER ']' IDENT default flags

    '['  shift, and go to state 113


State 13

   67 simple: LABEL • IDENT
   68       | LABEL • STRING

    IDENT   shift, and go to state 114
    STRING  shift, and go to state 115


State 14

  174 while_block: WHILE • '(' expression ')' '{' instructions '}'

    '('  shift, and go to state 116


State 15

   69 simple: IBMFLOAT • IDENT default flags
   85       | IBMFLOAT • IDENT '.' IDENT default flags
   86       | IBMFLOAT • IDENT '[' argument ']' default flags

    IDENT  shift, and go to state 117


State 16

   51 simple: SIGNED • '[' INTEGER ']' IDENT default flags
   52       | SIGNED • '[' INTEGER ']' IDENT '[' argument_list ']' default flags
   53       | SIGNED • '(' INTEGER ')' IDENT default flags
   54       | SIGNED • '(' INTEGER ')' IDENT '[' argument_list ']' default flags

    '['  shift, and go to state 118
    '('  shift, and go to state 119


State 17

   71 simple: UINT8 • IDENT default flags

    IDENT  shift, and go to state 120


State 18

   70 simple: INT8 • IDENT default flags

    IDENT  shift, and go to state 121


State 19

   73 simple: UINT16 • IDENT default flags

    IDENT  shift, and go to state 122


State 20

   72 simple: INT16 • IDENT default flags

    IDENT  shift, and go to state 123


State 21

   75 simple: UINT16_LITTLE_ENDIAN • IDENT default flags

    IDENT  shift, and go to state 124


State 22
